@@ -4,7 +4,7 @@
   <groupId>net.jsign</groupId>
   <artifactId>jsign-parent</artifactId>
   <name>Jsign - Authenticode signing in Java (Parent)</name>
-  <version>7.1-SNAPSHOT</version>
+  <version>7.2-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <inceptionYear>2012</inceptionYear>
@@ -90,14 +90,14 @@
     <dependency>
       <groupId>net.bytebuddy</groupId>
       <artifactId>byte-buddy-agent</artifactId>
-      <version>1.15.11</version>
+      <version>1.17.0</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>net.bytebuddy</groupId>
       <artifactId>byte-buddy</artifactId>
-      <version>1.15.11</version>
+      <version>1.17.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -251,7 +251,7 @@
 
   <profiles>
     <profile>
-      <id>jpms11</id>
+      <id>java11</id>
       <activation>
         <jdk>11</jdk>
       </activation>
@@ -268,12 +268,20 @@
       </build>
     </profile>
     <profile>
-      <id>jpms</id>
+      <id>java17+</id>
       <activation>
         <jdk>[17,)</jdk>
       </activation>
       <build>
         <plugins>
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <compilerArgs>
+                <arg>-proc:full</arg>
+              </compilerArgs>
+            </configuration>
+          </plugin>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
@@ -383,7 +391,7 @@
     <bouncycastle.version>2.73.7</bouncycastle.version>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.build.outputTimestamp>2025-01-16T08:34:01Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2025-02-14T17:41:47Z</project.build.outputTimestamp>
   </properties>
   
 </project>
